--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "langchain>=0.3.27",
     "langchain-community>=0.3.27",
     "langchain-core>=0.3.76",
+    "langchain-google-genai>=2.1.12",
     "langchain-huggingface>=0.3.1",
     "langchain-milvus>=0.2.1",
     "langchain-ollama>=0.3.8",
