--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.11,<3.13" 
 dependencies = [
+    "accelerate>=1.12.0",
     "gradio>=5.49.0",
     "grandalf>=0.8",
     "langchain>=0.3.27",
