Add available blueprints and maps

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,22 @@ unstructured[pdf]
 langgraph>=0.6.7
 langchain-openai
 openai>=1.40.0
+accelerate>=1.12.0
+gradio>=5.49.0
+grandalf>=0.8
+langchain>=0.3.27
+langchain-community>=0.3.27
+langchain-core>=0.3.76
+langchain-google-genai>=2.1.12
+langchain-huggingface>=0.3.1
+langchain-milvus>=0.2.1
+langchain-ollama>=0.3.8
+langchain-openai>=0.3.33
+langchain-unstructured>=0.1.6
+langgraph>=0.6.7
+markdown>=3.10
+mistralai>=1.9.10
+pydf>=12
+sentence-transformers>=5.1.1
+unstructured[pdf]>=0.7.5
+carla==0.9.15
