--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ langgraph>=0.6.7
 langchain-openai
 openai>=1.40.0
 accelerate>=1.12.0
-gradio>=5.49.0
+gradio==5.49.1
 grandalf>=0.8
 langchain>=0.3.27
 langchain-community>=0.3.27
